--- a/os-kernel/Cargo.toml
+++ b/os-kernel/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "os-kernel"
 version = "0.1.0"
+edition = "2018"
 
 [dependencies]
 bootloader = "0.9.23"
+volatile = "0.2.6"
 
 [profile.dev]
 panic = "abort"
